--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,19 @@ inputs:
   images:
     description: 'Image name'
     required: true
+  push:
+    description: 'Boolean to represent if we want to Push image to a Docker registry'
+    required: false
+    default: 'false'
+  registry:
+    description: 'Server address of Docker registry'
+    required: false
+  username:
+    description: 'Username used to log against the Docker registry'
+    required: false
+  password:
+    description: 'Password or personal access token used to log against the Docker registry'
+    required: false
 outputs:
   imageid:
     description: 'Image ID'
@@ -27,6 +40,13 @@ runs:
           type=ref,event=branch
           type=ref,event=pr
           type=ref,event=tag
+    - name: Login to GitHub Container Registry
+      if: ${{ inputs.push == 'true' }}
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ inputs.registry }}
+        username: ${{ inputs.username }}
+        password: ${{ inputs.password }}
     - name: Build
       id: build
       uses: docker/build-push-action@v5
