--- a/action.yml
+++ b/action.yml
@@ -51,5 +51,5 @@ runs:
       id: build
       uses: docker/build-push-action@v5
       with:
-        push: false
+        push: ${{ inputs.push }}
         tags: ${{ steps.meta.outputs.tags }}
