--- a/action.yml
+++ b/action.yml
@@ -43,8 +43,25 @@ runs:
       with:
         username: ${{ inputs.username }}
         password: ${{ inputs.password }}
-    - name: Build
+    - name: Build without pushing
       id: build
+      uses: docker/build-push-action@v5
+      with:
+        push: false
+        tags: ${{ steps.meta.outputs.tags }}
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: ${{ inputs.images }}:${{ steps.meta.outputs.tags }}
+        scan-type: image
+        format: 'table'
+        exit-code: '1'
+        ignore-unfixed: true
+        vuln-type: 'os,library'
+        severity: 'CRITICAL,HIGH'
+        hide-progress: true
+        scanners: 'vuln,secret,config'
+    - name: Build and push if required
       uses: docker/build-push-action@v5
       with:
         push: ${{ inputs.push }}
