--- a/action.yml
+++ b/action.yml
@@ -37,6 +37,7 @@ runs:
           type=ref,event=branch
           type=ref,event=pr
           type=ref,event=tag
+          type=sha
     - name: Login to GitHub Container Registry
       if: ${{ inputs.push == 'true' }}
       uses: docker/login-action@v3
