--- a/action.yml
+++ b/action.yml
@@ -37,7 +37,7 @@ runs:
           type=ref,event=branch
           type=ref,event=pr
           type=ref,event=tag
-          type=sha
+          type=sha,format=long
     - name: Login to GitHub Container Registry
       if: ${{ inputs.push == 'true' }}
       uses: docker/login-action@v3
@@ -53,7 +53,7 @@ runs:
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ${{ steps.meta.outputs.tags }}
+        image-ref: ${{ inputs.images }}:${{ github.sha }}
         scan-type: image
         format: 'table'
         exit-code: '1'
