--- a/action.yml
+++ b/action.yml
@@ -37,7 +37,7 @@ runs:
           type=ref,event=branch
           type=ref,event=pr
           type=ref,event=tag
-          type=sha,format=long
+          type=sha,format=long,prefix=
     - name: Login to GitHub Container Registry
       if: ${{ inputs.push == 'true' }}
       uses: docker/login-action@v3
