--- a/action.yml
+++ b/action.yml
@@ -37,15 +37,16 @@ runs:
     - name: Check Project Dependencies
       run: |
         project_type="${{ inputs.project_type }}"
+        context="${{ inputs.context }}"
         check_dependency_file() {
             local dependency_file=$1
             if [ -f $dependency_file ]; then
                 echo "$project_type dependency file '$dependent_file' found."        
             else
                 echo "$project_type dependency file '$dependent_file' not found."
-                if find . -iname "$dependency_file" -print | grep -q . ; then
+                if find "$context" -iname "$dependency_file" -print | grep -q . ; then
                     echo "Dependency file found in subdirectory. Update the relative path in the Dockerfile."
-                    find . -iname "$dependency_file" -print
+                    find "$context" -iname "$dependency_file" -print
                     exit 1
                 fi
                 exit 1
@@ -57,7 +58,7 @@ runs:
             "go") dependent_file="go.mod"; check_dependency_file "$dependent_file" ;;
             "perl") dependent_file="cpanfile"; check_dependency_file "$dependent_file";;
             "skip") echo "Skipping dependency validation" && : ;;
-            *) echo "No dependency file check for project type: $project_type. Supported project types: python, go, node or perl. Set project_type as skip to ignore this test." && exit 1 ;;
+            *) echo "No dependency file found for project type: $project_type. Supported project types: python, go, node or perl. Set project_type as skip to ignore this test." && exit 1 ;;
         esac
       shell: bash
       env:
