--- a/action.yml
+++ b/action.yml
@@ -36,33 +36,32 @@ runs:
   steps:
     - name: Check Project Dependencies
       run: |
-        project_type="${{ inputs.project_type }}"
-        context="${{ inputs.context }}"
         check_dependency_file() {
             local dependency_file=$1
             if [ -f $dependency_file ]; then
-                echo "$project_type dependency file '$dependent_file' found."        
+                echo "$PROJECT_TYPE dependency file '$dependent_file' found."        
             else
-                echo "$project_type dependency file '$dependent_file' not found."
-                if find "$context" -iname "$dependency_file" -print | grep -q . ; then
+                echo "$PROJECT_TYPE dependency file '$dependent_file' not found."
+                if find "$CONTEXT" -iname "$dependency_file" -print | grep -q . ; then
                     echo "Dependency file found in subdirectory. Update the relative path in the Dockerfile."
-                    find "$context" -iname "$dependency_file" -print
+                    find "$CONTEXT" -iname "$dependency_file" -print
                     exit 1
                 fi
                 exit 1
             fi
         } 
-        case "$project_type" in
+        case "$PROJECT_TYPE" in
             "python") dependent_file="requirements.txt"; check_dependency_file "$dependent_file" ;;
             "node") dependent_file="package.json"; check_dependency_file "$dependent_file" ;;
             "go") dependent_file="go.mod"; check_dependency_file "$dependent_file" ;;
             "perl") dependent_file="cpanfile"; check_dependency_file "$dependent_file";;
             "skip") echo "Skipping dependency validation" && : ;;
-            *) echo "No dependency file found for project type: $project_type. Supported project types: python, go, node or perl. Set project_type as skip to ignore this test." && exit 1 ;;
+            *) echo "No dependency file found for project type: $PROJECT_TYPE. Supported project types: python, go, node or perl. Set project_type as skip to ignore this test." && exit 1 ;;
         esac
       shell: bash
       env:
-        project_type: ${{ inputs.project_type }}   
+        PROJECT_TYPE: ${{ inputs.project_type }}
+        CONTEXT: ${{ inputs.context }}
     - name: Linter for Dockerfile
       uses: hadolint/hadolint-action@v3.1.0
       with:
