add context usage in hadolint also

--- a/action.yml
+++ b/action.yml
@@ -65,7 +65,7 @@ runs:
     - name: Linter for Dockerfile
       uses: hadolint/hadolint-action@v3.1.0
       with:
-        dockerfile: Dockerfile
+        dockerfile: ${{ format('{0}/{1}', inputs.context, inputs.dockerfile) }}
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     - name: Docker meta
