--- a/action.yml
+++ b/action.yml
@@ -34,6 +34,8 @@ outputs:
 runs:
   using: "composite"
   steps:
+    - name: Checkout code
+      uses: actions/checkout@v2  
     - name: Check Project Dependencies
       run: |
         check_dependency_file() {
